--- a/source/choose-color.html
+++ b/source/choose-color.html
@@ -419,6 +419,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -454,6 +492,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -489,6 +565,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -524,6 +638,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -559,6 +711,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -594,6 +784,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -629,6 +857,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -664,6 +930,44 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
@@ -699,28 +1003,49 @@
                   <use xlink:href="#spr-view"></use>
                 </svg>
               </a>
+              <ul class="cloth-variants__colors">
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+                <li class="cloth-variants__colors-item">
+                  <label class="cloth-variants__color">
+                    <input class="visually-hidden" type="radio" name="cloth-color">
+                    <span></span>
+                  </label>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer class="page__footer main-footer">
       <address class="main-footer__contacts contacts">
@@ -1096,6 +1421,10 @@
           <form class="popup-callback__form">
             <input class="popup-callback__input" type="text" placeholder="Ваше имя*">
             <input class="popup-callback__input" type="tel" placeholder="Ваш телефон*">
+            <label class="popup-callback__personal">
+              <input class="popup-callback__checkbox  visually-hidden" type="checkbox" value="true">
+              <span>Согласие на обработку персональных данных</span>
+            </label>
             <button class="popup-callback__submit" type="submit">Оставить заявку</button>
           </form>
           <button class="popup-callback__close  closeButton" type="button">
@@ -1119,7 +1448,7 @@
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
-            <input class="popup-auth__input" type="number" placeholder="ИНН*">
+            <input class="popup-auth__input" type="text" placeholder="ИНН*">
             <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
