--- a/source/services.html
+++ b/source/services.html
@@ -303,27 +303,27 @@
           <p class="services__description  services__description--afterword">Помимо представленных в каталоге товаров мы готовы предоставить вам индивидуальные решения.</p>
           <ul class="services__list">
             <li class="services__item">
-              <h3 class="services__item-name">Название услуги</h3>
+              <h3 class="services__item-name">Брэндирование изделий: нанесения вышивки, шеврона и пр.</h3>
               <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <h3 class="services__item-name">Название услуги</h3>
+              <h3 class="services__item-name">Выезд менеджера для снятия мерок, выездная презентация</h3>
               <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <h3 class="services__item-name">Название услуги</h3>
+              <h3 class="services__item-name">Разработка корпоративного стиля для клиники</h3>
               <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <h3 class="services__item-name">Название услуги</h3>
+              <h3 class="services__item-name">Поиск и приобретение тканей</h3>
               <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <h3 class="services__item-name">Название услуги</h3>
+              <h3 class="services__item-name">Консультация  закупкам изделий медицинского назначения по 44-ФЗ</h3>
               <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
             <li class="services__item">
-              <h3 class="services__item-name">Название услуги</h3>
+              <h3 class="services__item-name">А чтобы хотелось Вам?! Все предложения и пожелания сюда!</h3>
               <a class="services__item-link  js-order-callback" href="#">Заказать</a>
             </li>
           </ul>
@@ -865,6 +865,10 @@
           <form class="popup-callback__form">
             <input class="popup-callback__input" type="text" placeholder="Ваше имя*">
             <input class="popup-callback__input" type="tel" placeholder="Ваш телефон*">
+            <label class="popup-callback__personal">
+              <input class="popup-callback__checkbox  visually-hidden" type="checkbox" value="true">
+              <span>Согласие на обработку персональных данных</span>
+            </label>
             <button class="popup-callback__submit" type="submit">Оставить заявку</button>
           </form>
           <button class="popup-callback__close  closeButton" type="button">
@@ -888,7 +892,7 @@
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
-            <input class="popup-auth__input" type="number" placeholder="ИНН*">
+            <input class="popup-auth__input" type="text" placeholder="ИНН*">
             <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
