--- a/source/sizes-help.html
+++ b/source/sizes-help.html
@@ -973,6 +973,10 @@
           <form class="popup-callback__form">
             <input class="popup-callback__input" type="text" placeholder="Ваше имя*">
             <input class="popup-callback__input" type="tel" placeholder="Ваш телефон*">
+            <label class="popup-callback__personal">
+              <input class="popup-callback__checkbox  visually-hidden" type="checkbox" value="true">
+              <span>Согласие на обработку персональных данных</span>
+            </label>
             <button class="popup-callback__submit" type="submit">Оставить заявку</button>
           </form>
           <button class="popup-callback__close  closeButton" type="button">
@@ -996,7 +1000,7 @@
 
           <form class="popup-auth__form  js-form-signup">
             <input class="popup-auth__input" type="email" placeholder="Почта*">
-            <input class="popup-auth__input" type="number" placeholder="ИНН*">
+            <input class="popup-auth__input" type="text" placeholder="ИНН*">
             <button class="popup-auth__submit" type="submit">Регистрация</button>
           </form>
 
