--- a/source/checkout.html
+++ b/source/checkout.html
@@ -273,10 +273,21 @@
               SALE
             </a>
           </li>
-          <li class="popular-sections__item  popular-sections__item--desktop">
+          <li class="popular-sections__item  popular-sections__item--desktop  popular-sections__item--nested">
             <a class="popular-sections__link" href="#">
               Цвета и размеры
             </a>
+            <ul class="popular-sections__nested-list">
+              <li class="popular-sections__nested-item">
+                <a class="popular-sections__nested-link" href="#">Цвета</a>
+              </li>
+              <li class="popular-sections__nested-item">
+                <a class="popular-sections__nested-link" href="#">Размеры</a>
+              </li>
+              <li class="popular-sections__nested-item">
+                <a class="popular-sections__nested-link" href="#">Ткани</a>
+              </li>
+            </ul>
           </li>
           <li class="popular-sections__item">
             <a class="popular-sections__link" href="#">
